# This file is part of libnuma. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libnuma/master/COPYRIGHT. No part of libnuma, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of libnuma. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libnuma/master/COPYRIGHT.


[package]
name = "libnuma-sys"
description = "An binding that wraps libnuma"
keywords = ["libnuma", "NUMA", "wrapper", "C", "binding"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/libnuma/blob/master/README.md"
homepage = "https://github.com/lemonrock/libnuma"
repository = "https://github.com/lemonrock/libnuma.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.0.4"

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
bitflags = "^0.6"
libc = "0.2"
