# This file is part of libnuma. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libnuma/master/COPYRIGHT. No part of libnuma, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2018 The developers of libnuma. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libnuma/master/COPYRIGHT.


[package]
name = "libnuma"
description = "A mid-level binding to libnuma that provides Linux NUMA operations"
keywords = ["libnuma", "NUMA", "wrapper", "C", "binding"]
categories = ["external-ffi-bindings"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/libnuma/blob/master/README.md"
homepage = "https://github.com/lemonrock/libnuma"
repository = "https://github.com/lemonrock/libnuma.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.0.5"

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
bitflags = "1.0"
errno = "^0.1"
libc = "0.2"
libnuma-sys = { path = "../libnuma-sys", version = "0.0.6" }
